--- a/ta4j-core/pom.xml
+++ b/ta4j-core/pom.xml
@@ -10,6 +10,19 @@
 	<name>Ta4j Core</name>
 	<description>ta4j is a Java library providing a simple API for technical analysis.</description>
 
+	<properties>
+
+	  <!-- JaCoCo Properties -->
+	  <jacoco.version>0.8.6</jacoco.version>
+	  <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+	  <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+	  <sonar.language>java</sonar.language>
+
+	  <sonar.organization>aissprojects24</sonar.organization>
+	  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	  <!-- <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../core/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths> -->
+	</properties>
+
 	<dependencies>
 
 		<!-- Logging facade -->
@@ -43,6 +56,12 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<!-- <version>${jacoco.version}</version> -->
+			<version>0.8.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -75,6 +94,26 @@
 						]]>
 					</bnd>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
